# hoolgg

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  Dockerfile  PHASE1_DEPLOYMENT_SUMMARY.md  PHASE_2_SUMMARY.md  TECHNICAL_SUMMARY.md  TODO.md  TOKEN_QUICK_REFERENCE.md  VALIDATION_ISSUES_AND_FIXES.md  VALIDATION_REPORT.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run_migration_script.sh  run_migration_script2.sh  tsconfig.base.json
services/recruitment-api/: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PHASE_2_COMPLETION.md  PHASE_2_DEPLOYMENT_COMPLETE.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
services/recruitment-api/alembic/: env.py
services/recruitment-api/alembic/versions/: 001_create_recruitment_tables.py
services/recruitment-api/app/: __init__.py  config.py
services/recruitment-api/app/middleware/: __init__.py  auth.py
services/recruitment-api/app/models/: __init__.py  recruitment_candidate.py  recruitment_category.py  recruitment_history.py
services/recruitment-api/app/routes/: __init__.py  health.py  recruitment.py
services/recruitment-api/app/services/: __init__.py  permission_service.py  (+3 more)
services/recruitment-api/docs/: API.md  DEPLOYMENT.md  RUNBOOK.md  TESTING_CHECKLIST.md
services/recruitment-api/tests/: __init__.py  conftest.py  test_candidates.py  test_health.py  test_integration.py
(+287 files in other folders)
